form gap fixes & editar mi cuenta

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -601,10 +601,6 @@ video {
   margin-right: auto;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -629,12 +625,32 @@ video {
   margin-top: 2rem;
 }
 
-.block {
-  display: block;
+.mt-\[70\%\] {
+  margin-top: 70%;
 }
 
-.inline-block {
-  display: inline-block;
+.mt-\[1s0\%\] {
+  margin-top: 1s0%;
+}
+
+.mt-\[10\%\] {
+  margin-top: 10%;
+}
+
+.mt-\[20\%\] {
+  margin-top: 20%;
+}
+
+.mt-\[30\%\] {
+  margin-top: 30%;
+}
+
+.mt-\[25\%\] {
+  margin-top: 25%;
+}
+
+.block {
+  display: block;
 }
 
 .flex {
@@ -701,10 +717,6 @@ video {
   height: 1.5rem;
 }
 
-.h-72 {
-  height: 18rem;
-}
-
 .h-\[150px\] {
   height: 150px;
 }
@@ -751,20 +763,20 @@ video {
   max-height: 9rem;
 }
 
-.max-h-\[300px\] {
-  max-height: 300px;
-}
-
-.max-h-32 {
-  max-height: 8rem;
-}
-
 .max-h-7 {
   max-height: 1.75rem;
 }
 
+.max-h-\[300px\] {
+  max-height: 300px;
+}
+
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-\[150px\] {
+  min-height: 150px;
 }
 
 .w-1\/2 {
@@ -805,6 +817,10 @@ video {
 
 .w-64 {
   width: 16rem;
+}
+
+.w-7 {
+  width: 1.75rem;
 }
 
 .w-96 {
@@ -865,44 +881,28 @@ video {
   width: 100vw;
 }
 
-.w-7 {
-  width: 1.75rem;
+.w-\[600px\] {
+  width: 600px;
 }
 
 .w-\[700px\] {
   width: 700px;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-\[650px\] {
+  width: 650px;
 }
 
 .min-w-\[400px\] {
   min-width: 400px;
 }
 
-.min-w-\[700px\] {
-  min-width: 700px;
-}
-
-.min-w-\[100px\] {
-  min-width: 100px;
-}
-
-.max-w-\[200px\] {
-  max-width: 200px;
+.max-w-24 {
+  max-width: 6rem;
 }
 
 .max-w-\[400px\] {
   max-width: 400px;
-}
-
-.max-w-\[450px\] {
-  max-width: 450px;
-}
-
-.max-w-24 {
-  max-width: 6rem;
 }
 
 .flex-1 {
@@ -911,10 +911,6 @@ video {
 
 .shrink-0 {
   flex-shrink: 0;
-}
-
-.flex-grow {
-  flex-grow: 1;
 }
 
 .-translate-x-10 {
@@ -957,10 +953,6 @@ video {
   grid-template-columns: 1fr 3fr;
 }
 
-.grid-cols-\[min-content_1fr\] {
-  grid-template-columns: min-content 1fr;
-}
-
 .grid-rows-\[1fr_min-content\] {
   grid-template-rows: 1fr min-content;
 }
@@ -973,12 +965,8 @@ video {
   flex-direction: column;
 }
 
-.place-content-center {
-  place-content: center;
-}
-
-.place-items-center {
-  place-items: center;
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-start {
@@ -1049,8 +1037,8 @@ video {
   gap: 10px;
 }
 
-.gap-1 {
-  gap: 0.25rem;
+.gap-\[20px\] {
+  gap: 20px;
 }
 
 .overflow-hidden {
@@ -1085,6 +1073,11 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-b-lg {
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+}
+
 .rounded-l-3xl {
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
@@ -1115,11 +1108,6 @@ video {
   border-top-right-radius: 0.75rem;
 }
 
-.rounded-b-lg {
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
-
 .rounded-bl-xl {
   border-bottom-left-radius: 0.75rem;
 }
@@ -1138,6 +1126,10 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-0 {
+  border-width: 0px;
 }
 
 .border-2 {
@@ -1181,6 +1173,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.border-red-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity));
+}
+
 .bg-\[\#d9d9d9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(217 217 217 / var(--tw-bg-opacity));
@@ -1220,6 +1217,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -1250,17 +1252,16 @@ video {
   padding: 5rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
   padding: 1rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-10 {
@@ -1271,11 +1272,6 @@ video {
 .px-12 {
   padding-left: 3rem;
   padding-right: 3rem;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
 }
 
 .px-16 {
@@ -1378,10 +1374,6 @@ video {
   padding-bottom: 13rem;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1390,16 +1382,24 @@ video {
   padding-bottom: 1rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
 .pt-24 {
   padding-top: 6rem;
+}
+
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .text-left {
@@ -1477,6 +1477,19 @@ video {
   line-height: 1rem;
 }
 
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-\[36px\] {
+  font-size: 36px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1515,6 +1528,11 @@ video {
 .text-primary {
   --tw-text-opacity: 1;
   color: rgb(29 58 70 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -1577,11 +1595,6 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.hover\:text-red-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
 .hover\:text-contraste:hover {
   --tw-text-opacity: 1;
   color: rgb(146 170 179 / var(--tw-text-opacity));
@@ -1589,24 +1602,4 @@ video {
 
 .hover\:underline:hover {
   text-decoration-line: underline;
-}
-
-.group:hover .group-hover\:text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
-}
-
-.group\/dos:hover .group-hover\/dos\:text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
-}
-
-.group\/tres:hover .group-hover\/tres\:text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
-}
-
-.group\/uno:hover .group-hover\/uno\:text-indigo-500 {
-  --tw-text-opacity: 1;
-  color: rgb(99 102 241 / var(--tw-text-opacity));
 }
